--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Graphic Design</h3>
+										<h3>Programming Tutor</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
@@ -200,7 +200,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Innovative Ideas</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>WOW!</p>
 								</div>
 							</div>
 						</div>
@@ -211,7 +211,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Software</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>WOW!</p>
 								</div>
 							</div>
 						</div>
@@ -222,7 +222,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Application</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>WOW!</p>
 								</div>
 							</div>
 						</div>
@@ -233,7 +233,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</span>
 								<div class="desc">
 									<h3>Graphic Design</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>WOW!</p>
 								</div>
 							</div>
 						</div>
@@ -243,8 +243,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Software</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Music</h3>
+									<p>WOW!</p>
 								</div>
 							</div>
 						</div>
@@ -254,8 +254,8 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Basketball</h3>
+									<p>WOW!</p>
 								</div>
 							</div>
 						</div>
@@ -270,19 +270,19 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="309" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Cups of coffee</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="1000" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Problems solved</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="356" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="3" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="30" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="0" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Clients</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="0" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Partners</span>
 						</div>
 					</div>
